[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = "0.1"
demo-common = { path = "../demo-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "demo"
path = "src/main.rs"
